Added receiving roster data by tournament ID
