# docs/swagger.yaml
@@ -27,6 +27,8 @@ definitions:
         type: string
       rarity:
         $ref: '#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_store.CardRarity'
+      rarityName:
+        type: string
       sweaterNumber:
         type: integer
       teamID:
@@ -81,10 +83,10 @@ definitions:
     - 3
     type: integer
     x-enum-varnames:
-    - ErrPlayerPosition
-    - Goalie
-    - Defensemen
-    - Forward
+    - ErrPlayerMetric
+    - GoalieMetric
+    - DefensemenMetric
+    - ForwardMetric
   github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_store.CardRarity:
     enum:
     - 0
@@ -149,6 +151,22 @@ definitions:
       statusEvent:
         type: string
     type: object
+  github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.PositionData:
+    properties:
+      positionAbbrev:
+        type: string
+      positionName:
+        type: string
+    type: object
+  github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.TeamData:
+    properties:
+      teamAbbrev:
+        type: string
+      teamID:
+        type: integer
+      teamName:
+        type: string
+    type: object
   github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.Tournament:
     properties:
       TimeStart:
@@ -173,6 +191,23 @@ definitions:
         type: string
       tournamentId:
         type: integer
+    type: object
+  github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.TournamentRosterResponse:
+    properties:
+      players:
+        items:
+          $ref: '#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.PlayerResponse'
+        type: array
+      positions:
+        items:
+          $ref: '#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.PositionData'
+        type: array
+      teams:
+        items:
+          $ref: '#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.TeamData'
+        type: array
+      url:
+        type: string
     type: object
   github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_user.ChangePasswordInput:
     properties:
@@ -775,6 +810,41 @@ paths:
           schema:
             $ref: '#/definitions/pkg_api.Error'
       summary: Получение турниров на ближайшие 2 дня
+      tags:
+      - tournament
+  /tournament/roster:
+    get:
+      consumes:
+      - application/json
+      description: Получение составов на турнир
+      parameters:
+      - description: tournamentID
+        in: query
+        name: tournamentID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.TournamentRosterResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/pkg_api.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/pkg_api.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/pkg_api.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Получение составов на турнир
       tags:
       - tournament
   /user/delete:
